--- a/HppDonatApp/Controls/IngredientLineControl.xaml
+++ b/HppDonatApp/Controls/IngredientLineControl.xaml
@@ -2,79 +2,8 @@
 <UserControl
     x:Class="HppDonatApp.Controls.IngredientLineControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:HppDonatApp.Controls">
-
-    <Grid Padding="12" BorderBrush="{ThemeResource DividerStrokeColorDefaultBrush}" BorderThickness="0,0,0,1">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="100"/>
-            <ColumnDefinition Width="120"/>
-            <ColumnDefinition Width="120"/>
-            <ColumnDefinition Width="120"/>
-            <ColumnDefinition Width="100"/>
-            <ColumnDefinition Width="80"/>
-        </Grid.ColumnDefinitions>
-
-        <!-- Ingredient Selection -->
-        <StackPanel Spacing="4">
-            <AutoSuggestBox x:Name="IngredientSuggestionBox"
-                PlaceholderText="Cari bahan..."
-                TextChanged="OnIngredientSearchChanged"
-                QuerySubmitted="OnIngredientQuerySubmitted"/>
-            <TextBlock x:Name="SelectedIngredientCode" 
-                Text="Code: -" 
-                Style="{StaticResource CaptionTextBlockStyle}" 
-                Foreground="{ThemeResource TextFillColorSecondaryBrush}"/>
-        </StackPanel>
-
-        <!-- Unit Selector -->
-        <ComboBox Grid.Column="1" 
-            x:Name="UnitComboBox"
-            ItemsSource="{x:Bind AvailableUnits, Mode=OneWay}"
-            SelectedItem="{x:Bind SelectedUnit, Mode=TwoWay}"
-            SelectionChanged="OnUnitChanged"/>
-
-        <!-- Quantity Input -->
-        <NumberBox Grid.Column="2" 
-            x:Name="QuantityInput"
-            Value="{x:Bind Quantity, Mode=TwoWay}"
-            Minimum="0"
-            Margin="8,0,0,0"
-            SpinButtonPlacementMode="Inline"
-            ValueChanged="OnQuantityChanged"
-            KeyDown="OnQuantityKeyDown"/>
-
-        <!-- Unit Price Display -->
-        <TextBlock Grid.Column="3" 
-            x:Name="UnitPriceDisplay"
-            Text="Rp 0"
-            Margin="8,0,0,0"
-            VerticalAlignment="Center"/>
-
-        <!-- Total Cost Display -->
-        <TextBlock Grid.Column="4" 
-            x:Name="TotalCostDisplay"
-            Text="Rp 0"
-            Margin="8,0,0,0"
-            VerticalAlignment="Center"
-            FontWeight="Bold"
-            Foreground="{ThemeResource AccentTextFillColorPrimaryBrush}"/>
-
-        <!-- Percentage Display -->
-        <TextBlock Grid.Column="5" 
-            x:Name="PercentageDisplay"
-            Text="0%"
-            Margin="8,0,0,0"
-            VerticalAlignment="Center"
-            TextAlignment="Center"/>
-
-        <!-- Remove Button -->
-        <Button Grid.Column="6" 
-            x:Name="RemoveButton"
-            Content="✕"
-            Margin="8,0,0,0"
-            Click="OnRemoveClicked"
-            ToolTipService.ToolTip="Hapus bahan ini dari resep"/>
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    <Grid Padding="12">
+        <TextBlock Text="Ingredient line" />
     </Grid>
 </UserControl>
