--- a/HppDonatApp/MainWindow.xaml
+++ b/HppDonatApp/MainWindow.xaml
@@ -2,35 +2,6 @@
 <Window
     x:Class="HppDonatApp.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:HppDonatApp"
-    Title="HPP Donat Calculator">
-
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="200"/>
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
-
-        <!-- Navigation Pane -->
-        <StackPanel Grid.Column="0" Padding="16">
-            <TextBlock Text="Menu" Style="{StaticResource HeaderTextBlockStyle}" Margin="0,0,0,16"/>
-
-            <NavigationView x:Name="NavView"
-                IsSettingsVisible="True"
-                DisplayMode="Minimal">
-                <NavigationView.MenuItems>
-                    <NavigationViewItem Icon="Home" Content="Dashboard" Tag="dashboard"/>
-                    <NavigationViewItem Icon="Edit" Content="Recipe Editor" Tag="editor"/>
-                    <NavigationViewItem Icon="Library" Content="Ingredients" Tag="ingredients"/>
-                    <NavigationViewItem Icon="BarChart4" Content="Reports" Tag="reports"/>
-                </NavigationView.MenuItems>
-            </NavigationView>
-        </StackPanel>
-
-        <!-- Main Content Area -->
-        <Grid Grid.Column="1" Padding="16">
-            <Frame x:Name="ContentFrame"/>
-        </Grid>
-    </Grid>
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    <Grid />
 </Window>
