--- a/HppDonatApp/Views/IngredientsPage.xaml
+++ b/HppDonatApp/Views/IngredientsPage.xaml
@@ -2,113 +2,8 @@
 <Page
     x:Class="HppDonatApp.Views.IngredientsPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:HppDonatApp.Views"
-    Title="Manajemen Bahan">
-
-    <Grid Padding="24" RowSpacing="16">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
-
-        <!-- Header -->
-        <TextBlock Grid.Row="0" 
-            Text="Manajemen Bahan Baku" 
-            Style="{StaticResource TitleTextBlockStyle}"/>
-
-        <!-- Toolbar -->
-        <CommandBar Grid.Row="1" DefaultLabelPosition="Right">
-            <AppBarButton Icon="Add" Label="Tambah Bahan" Command="{x:Bind ViewModel.AddIngredientCommand}" ToolTipService.ToolTip="Tambah bahan baru ke sistem"/>
-            <AppBarButton Icon="Refresh" Label="Refresh" Command="{x:Bind ViewModel.RefreshIngredientsCommand}" ToolTipService.ToolTip="Muat ulang data bahan"/>
-            <AppBarSeparator/>
-            <AppBarButton Icon="Delete" Label="Hapus" Command="{x:Bind ViewModel.DeleteIngredientCommand}" ToolTipService.ToolTip="Hapus bahan terpilih"/>
-            <AppBarButton Icon="Edit" Label="Edit" Command="{x:Bind ViewModel.EditIngredientCommand}" ToolTipService.ToolTip="Edit detail bahan"/>
-        </CommandBar>
-
-        <!-- Search and Filter Bar -->
-        <StackPanel Grid.Row="2" Orientation="Horizontal" Spacing="12">
-            <AutoSuggestBox x:Name="SearchBox" 
-                Width="250"
-                PlaceholderText="Cari bahan..."
-                TextChanged="{x:Bind ViewModel.OnSearchTextChanged}"/>
-            <ComboBox x:Name="CategoryFilter" 
-                Width="150"
-                Header="Kategori"
-                ItemsSource="{x:Bind ViewModel.Categories, Mode=OneWay}"
-                SelectionChanged="{x:Bind ViewModel.OnCategoryChanged}"/>
-            <ComboBox x:Name="UnitFilter" 
-                Width="120"
-                Header="Satuan"
-                ItemsSource="{x:Bind ViewModel.Units, Mode=OneWay}"
-                SelectionChanged="{x:Bind ViewModel.OnUnitChanged}"/>
-        </StackPanel>
-
-        <!-- Ingredients List View -->
-        <ListView Grid.Row="3" 
-            x:Name="IngredientsListView"
-            ItemsSource="{x:Bind ViewModel.FilteredIngredients, Mode=OneWay}"
-            SelectionMode="Single"
-            SelectionChanged="{x:Bind ViewModel.OnIngredientSelected}">
-            <ListView.HeaderTemplate>
-                <DataTemplate>
-                    <Grid Padding="12" Background="{ThemeResource CardBackgroundFillColorDefaultBrush}">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="2*"/>
-                            <ColumnDefinition Width="150"/>
-                            <ColumnDefinition Width="120"/>
-                            <ColumnDefinition Width="120"/>
-                            <ColumnDefinition Width="100"/>
-                            <ColumnDefinition Width="100"/>
-                            <ColumnDefinition Width="100"/>
-                        </Grid.ColumnDefinitions>
-                        <TextBlock Text="Nama Bahan" FontWeight="Bold"/>
-                        <TextBlock Grid.Column="1" Text="Satuan" FontWeight="Bold" Margin="8,0,0,0"/>
-                        <TextBlock Grid.Column="2" Text="Stok Saat Ini" FontWeight="Bold" Margin="8,0,0,0"/>
-                        <TextBlock Grid.Column="3" Text="Harga/Satuan" FontWeight="Bold" Margin="8,0,0,0"/>
-                        <TextBlock Grid.Column="4" Text="Kategori" FontWeight="Bold" Margin="8,0,0,0"/>
-                        <TextBlock Grid.Column="5" Text="Supplier" FontWeight="Bold" Margin="8,0,0,0"/>
-                        <TextBlock Grid.Column="6" Text="Perhatian" FontWeight="Bold" Margin="8,0,0,0"/>
-                    </Grid>
-                </DataTemplate>
-            </ListView.HeaderTemplate>
-            <ListView.ItemTemplate>
-                <DataTemplate x:DataType="local:IngredientDisplayModel">
-                    <Grid Padding="12" BorderBrush="{ThemeResource DividerStrokeColorDefaultBrush}" BorderThickness="0,0,0,1">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="2*"/>
-                            <ColumnDefinition Width="150"/>
-                            <ColumnDefinition Width="120"/>
-                            <ColumnDefinition Width="120"/>
-                            <ColumnDefinition Width="100"/>
-                            <ColumnDefinition Width="100"/>
-                            <ColumnDefinition Width="100"/>
-                        </Grid.ColumnDefinitions>
-                        
-                        <StackPanel Spacing="4">
-                            <TextBlock Text="{x:Bind IngredientName}" Style="{StaticResource BodyTextBlockStyle}" FontWeight="Bold"/>
-                            <TextBlock Text="{x:Bind Description}" Style="{StaticResource CaptionTextBlockStyle}" Foreground="{ThemeResource TextFillColorSecondaryBrush}"/>
-                        </StackPanel>
-                        
-                        <TextBlock Grid.Column="1" Text="{x:Bind Unit}" Margin="8,0,0,0"/>
-                        
-                        <StackPanel Grid.Column="2" Margin="8,0,0,0">
-                            <TextBlock Text="{x:Bind CurrentStock}"/>
-                            <TextBlock Text="{x:Bind StockStatus}" FontSize="11" Foreground="{ThemeResource TextFillColorSecondaryBrush}"/>
-                        </StackPanel>
-                        
-                        <TextBlock Grid.Column="3" Text="{x:Bind CurrentPrice}" Margin="8,0,0,0"/>
-                        <TextBlock Grid.Column="4" Text="{x:Bind Category}" Margin="8,0,0,0"/>
-                        <TextBlock Grid.Column="5" Text="{x:Bind Supplier}" Margin="8,0,0,0"/>
-                        
-                        <StackPanel Grid.Column="6" Margin="8,0,0,0">
-                            <InfoBadge Value="{x:Bind StockAlert}" Severity="{x:Bind AlertSeverity}" Visibility="{x:Bind StockAlertVisibility}"/>
-                        </StackPanel>
-                    </Grid>
-                </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    <Grid Padding="24">
+        <TextBlock Text="Ingredients" />
     </Grid>
 </Page>
