--- a/HppDonatApp/App.xaml
+++ b/HppDonatApp/App.xaml
@@ -2,8 +2,9 @@
 <Application
     x:Class="HppDonatApp.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:controls="using:Microsoft.UI.Xaml.Controls">
     <Application.Resources>
-        <ResourceDictionary />
+        <controls:XamlControlsResources />
     </Application.Resources>
 </Application>
