--- a/HppDonatApp/MainWindow.xaml
+++ b/HppDonatApp/MainWindow.xaml
@@ -1,7 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Window
+<winuiex:WindowEx
     x:Class="HppDonatApp.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Grid />
-</Window>
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:winuiex="using:WinUIEx">
+    <NavigationView x:Name="RootNavigationView"
+                    PaneTitle="HPP Donat Enterprise"
+                    IsBackButtonVisible="Collapsed"
+                    IsSettingsVisible="False"
+                    SelectionChanged="OnNavigationSelectionChanged">
+        <NavigationView.MenuItems>
+            <NavigationViewItem x:Name="CalculatorNavItem"
+                                Content="Kalkulator HPP"
+                                Tag="calculator" />
+            <NavigationViewItem x:Name="SettingsNavItem"
+                                Content="Settings"
+                                Tag="settings" />
+        </NavigationView.MenuItems>
+
+        <Frame x:Name="RootFrame" />
+    </NavigationView>
+</winuiex:WindowEx>
